// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`changeGeneSelection action Dispatches deselect event when select event specified 1`] = `
{
  "payload": {
    "experimentId": "1234",
    "genes": [
      "a",
      "b",
      "c",
      "d",
    ],
  },
  "type": "genes/deselect",
}
`;

exports[`changeGeneSelection action Dispatches select event when select event specified 1`] = `
{
  "payload": {
    "experimentId": "1234",
    "genes": [
      "a",
      "b",
      "c",
      "d",
    ],
  },
  "type": "genes/select",
}
`;
